# IronCortex

./: AFA.md  AGENTS.md  TODO.md  all_in_one.py  pyproject.toml  readme.md  train_tiny_shakespeare.py  train_tiny_shakespeare_10m.py
docs/: book_structure.md  numenta_htm_integration.md
ironcortex/: __init__.py  checkpoint.py  config.py  constants.py  corruptions.py  data.py  diffusion.py  energy.py  evaluation.py  ff_energy.py  gate.py  generation.py  heads.py  hex_visualizer.py  iron_rope.py  model.py  region.py  sdr.py  thinking.py  training.py  utils.py  visualization.py  wiring.py
ironcortex/attention/: __init__.py  adaptive_filter_attention.py
tests/: conftest.py  sitecustomize.py  test_adaptive_filter_attention.py  test_checkpoint.py  test_data.py  test_energy.py  test_eval.py  test_generation_interval.py  test_hex_state_visualizer.py  test_hex_visualizer.py  test_kwta.py  test_milestone6.py  test_profile.py  test_router_precision.py  test_rwkv_region.py  test_smoke.py  test_sparse_encoder.py  test_train_hex_visualizer.py  test_visualization.py  test_wiring.py
